backend/deploy/envs/dev/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilispect-api
spec:
  replicas: 1
