backend/deploy/envs/dev/version.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobilispect-api
spec:
  template:
    spec:
      containers:
        - name: mobilispect-api
          image: mobilispect-api:0.0.8-SNAPSHOT
