backend/deploy/envs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobilispect-api
spec:
  ingressClassName: nginx
  rules:
    - host: dev.api.mobilispect.com
      http:
        paths:
          - backend:
              service:
                name: mobilispect-api
                port:
                  number: 80
            path: "/"
            pathType: Prefix
